objects/May16__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <description>chgchhjvhjdfedgregreghdcdv</description>
        <label>Color</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nvidia_text__c</fullName>
        <description>fegferhtrhgtjj</description>
        <label>Nvidia text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <description>wegrehgtrehtrjhrjj</description>
        <label>Text1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>egrrehtrhtrjtj</description>
        <label>UAT</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>